@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.skyvideoitalia" name="Sky Video Italia" version="0.0.4" provider-name="nixxo">
+<addon id="plugin.video.skyvideoitalia" name="Sky Video Italia" version="0.0.5" provider-name="nixxo">
     <requires>
         <import addon="xbmc.python" version="3.0.0" />
+        <import addon="script.module.simplecache" version="1.0.0"/>
         <import addon="script.module.phate89" version="1.2.1+matrix.1"/>
     </requires>
     <extension point="xbmc.python.pluginsource" library="default.py">
@@ -10,16 +11,16 @@
     <extension point="xbmc.addon.metadata">
         <summary lang="it_IT">Visualizza contenuti di Sky Video Italia</summary>
         <description lang="it_IT">Visualizza contenuti di Sky Video Italia</description>
-        <summary lang="en_GB">Visualizza contenuti di Sky Video Italia</summary>
-        <description lang="en_GB">Visualizza contenuti di Sky Video Italia</description>
+        <summary lang="en_GB">Show content from Sky Video Italia</summary>
+        <description lang="en_GB">Show content from Sky Video Italia</description>
         <language>it</language>
         <platform>all</platform>
         <license>GPL-3.0-or-later</license>
         <website>https://www.github.com/nixxo</website>
         <source>https://www.github.com/nixxo/plugin.video.skyvideoitalia</source>
-        <news>0.0.4
+        <news>0.0.5
 - code improvements
-- added fanart to listitems
+- using simplecache
         </news>
         <assets>
             <icon>resources/icon.png</icon>
